# ecological-fallacy

./: LICENSE  README.md  pyproject.toml
ecological_fallacy/: run.py
ecological_fallacy/analysis/: replicability.py
ecological_fallacy/datasets/: kumar.py  splits.py
ecological_fallacy/eval/: callbacks.py  metrics.py
ecological_fallacy/models/: __init__.py  mapping.py  multiannotator.py
ecological_fallacy/training/: __init__.py  multiannotator.py
experiments/0.1-majority-baseline/: config.json
experiments/0.2-baseline/: config.json
experiments/1.1-age/: config.json
experiments/1.2-gender/: config.json
experiments/1.3-education/: config.json
experiments/1.4-lgbq/: config.json
experiments/2.1-age-random/: config.json
experiments/2.2-gender-random/: config.json
experiments/2.3-education-random/: config.json
experiments/2.4-lgbq-random/: config.json
notebooks/: 01_exploration_kumar.ipynb  02_create_sample_kumar.ipynb  03_explore_kumar_sample.ipynb  04_results.ipynb  05.1_significance_vs_randomized.ipynb  05.2_significance_vs_baseline.ipynb
tests/: test_majoritylabel_metrics.py  test_multiannotator_metrics.py  test_split_generation.py
