[tool.poetry]
name = "ecological_fallacy"
version = "1.0.0"
description = ""
authors = ["Matthias Orlikowski <matthias@orlikow.ski>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8"
pandas = "^1.3.4"
jupyter = "^1.0.0"
ipykernel = "^6.5.1"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
ipympl = "^0.8.8"
torch = {extras = ["cpu"], version = "^1.11.0"}
datasets = "^2.1.0"
transformers = "^4.19.2"
nltk = "^3.7"
seaborn = "^0.12.1"
boostsa = {git = "https://github.com/morlikowski/boostsa.git", rev = "b2082a734e85a9ac8bfa355e519293b586be70d6", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ecological_fallacy = "ecological_fallacy.run_ghc_mt:run"